# hpp-pinocchio

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt  NEWS  README.md  default.nix  flake.nix  package.xml  pyproject.toml
.github/workflows/: update-flake-lock.yml
doc/: Doxyfile.extra.in  layout.xml  main-page.hh
include/hpp/pinocchio/: body.hh  center-of-mass-computation.hh  collision-object.hh  configuration.hh  device-data.hh  device-object-vector.hh  device-sync.hh  device.hh  distance-result.hh  extra-config-space.hh  fake-container.hh  frame.hh  fwd.hh  gripper.hh  humanoid-robot.hh  joint-collection.hh  joint.hh  liegroup-element.hh  liegroup-space.hh  liegroup.hh  object-iterator.hh  pool.hh  serialization.hh  shared-ptr.hh  simple-device.hh  util.hh
include/hpp/pinocchio/hpp-model/: conversions.hh  model-loader.hh
include/hpp/pinocchio/liegroup/: cartesian-product.hh  serialization.hh  special-euclidean.hh  special-orthogonal.hh  vector-space.hh
include/hpp/pinocchio/urdf/: util.hh
src/: CMakeLists.txt  addition-visitor.hh  body.cc  center-of-mass-computation.cc  collision-object.cc  comparison.hh  comparison.hxx  configuration.cc  device-data.cc  device-object-vector.cc  device-sync.cc  device.cc  dintegrate-visitor.hh  eigen_fix.hh  frame.cc  gripper.cc  humanoid-robot.cc  is-normalized-visitor.hh  jdifference-visitor.hh  jintegrate-visitor.hh  joint.cc  liegroup-element.cc  liegroup-space.cc  log-visitor.hh  object-iterator.cc  shared-ptr.cc  simple-device.cc  size-visitor.hh  substraction-visitor.hh  util.cc
src/center-of-mass-computation/: algorithm.cc
src/hpp-model/: model-loader.cc  model-loader.cc.in
src/joint/: bound.hh
src/urdf/: util.cc
src/visitor/: interpolate.hh
tests/: CMakeLists.txt  device-sync.cc  device.cc  frame.cc  joint-bounds.cc  liegroup-element.cc  pool.cc  print.cc  serialization.cc  tbody.cc  tcenter-of-mass.cc  tconfiguration.cc  tdevice.cc  tfakecontainer.cc  tgripper.cc  tjoint.cc  urdf.cc  utils.hh
